--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -44,3 +44,31 @@ commands:
     delhome:
         description: Rimuovi una home
         default: true
+    adminhome:
+        aliases: [ahome]
+        description: ADMIN Teletrasportati alla home di un giocatore
+        default: OP
+    adminhomes:
+        aliases: [ahomes]
+        description: ADMIN Visualizza tutte le homes di un giocatore
+        default: OP
+    adminsethome:
+        aliases: [asethome]
+        description: ADMIN Imposta una nuova home ad un giocatore
+        default: OP
+    admindelhome:
+        aliases: [adelhome]
+        description: ADMIN Rimuovi una home ad un giocatore
+        default: OP
+    warp:
+        description: Teletrasportati ad uno warp
+        default: true
+    warps:
+        description: Visualizza la lista degli warps
+        default: true
+    setwarp:
+        description: Imposta una nuovo warp
+        default: OP
+    delwarp:
+        description: Rimuovi uno warp
+        default: OP
